--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -73,6 +73,49 @@ input:-webkit-autofill {
           right: 0px;
         }
       }
+      
+      .popup{
+        position: relative;
+        left: -3px;
+        min-width: 200px;
+        max-height: 180px;
+        z-index: 5;
+        background-color: $color-white;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        border-radius: 3px;
+        box-shadow: 2px 2px 5px 5px $color-shadow-light;
+          .select-group-list{
+            position: relative;
+            .select-option{
+              margin: 10px 10px 0px 10px;
+            &-flag{
+
+            }
+            &-name{
+
+            }
+            &-prefix{
+
+            }
+          }
+        }
+        // .bottom-fade{
+        //   content:"";
+        //   position: relative;
+        //   // margin-top:
+        //   height: 30px;
+        //   z-index: 10;
+        //   background-image: linear-gradient(to top, white, transparent);
+        // }
+      }
+      .dropdown-fade{
+        //transition
+      }
+
+      .dropdown-back{
+        //transition
+      }
     }
   }
 }
