--- a/src/styles/components/_businessCard.scss
+++ b/src/styles/components/_businessCard.scss
@@ -86,6 +86,7 @@
       color: $color-print-main;
       font-size: $font-size-m;
       line-height: 24px;
+      height: 24px;
     }
     
     &-subtitle {
