--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -47,7 +47,7 @@ input:-webkit-autofill {
       }
     }
     
-    &.email-error:after{
+    &.input-error:after{
         content: url("../images/warning.svg");
         position: relative;
         top: 14px;
