finished select arrow rotating

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -417,6 +417,16 @@ input:-webkit-autofill {
     position: relative;
     top: 14px;
     right: 0px; }
+  .formField-input.arrow-down:after, .formField-select.arrow-down:after {
+    content: url("../images/arrow.svg");
+    position: relative;
+    top: 14px;
+    right: 0px; }
+  .formField-input.arrow-up:after, .formField-select.arrow-up:after {
+    content: url("../images/arrow.svg");
+    position: relative;
+    transform: rotate(180deg);
+    top: -4px; }
   .formField-input .input, .formField-input .select, .formField-select .input, .formField-select .select {
     flex: 1 1 100%;
     position: relative; }
@@ -443,11 +453,6 @@ input:-webkit-autofill {
       width: 72px;
       height: 40px;
       padding: 16px 0px 8px; }
-      .formField-input .input-input:after, .formField-input .select-input:after, .formField-select .input-input:after, .formField-select .select-input:after {
-        content: url("../images/arrow.svg");
-        position: absolute;
-        top: 14px;
-        right: 0px; }
     .formField-input .input .popup, .formField-input .select .popup, .formField-select .input .popup, .formField-select .select .popup {
       display: none;
       font-size: 14px;
