--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -53,6 +53,18 @@ input:-webkit-autofill {
         top: 14px;
         right: 0px;
     }
+    &.arrow-down:after{
+      content: url("../images/arrow.svg");
+      position: relative;
+      top: 14px;
+      right: 0px;
+    }
+    &.arrow-up:after{
+      content: url("../images/arrow.svg");
+      position: relative;
+      transform: rotate(180deg);
+      top: -4px;
+    }
     .input, .select {
       flex: 1 1 100%;
       position: relative;
@@ -84,12 +96,7 @@ input:-webkit-autofill {
         width: 72px;
         height: 40px;
         padding: 16px 0px 8px;
-        &:after{
-          content: url("../images/arrow.svg");
-          position: absolute;
-          top: 14px;
-          right: 0px;
-        }
+        
       }
       
       .popup{
