--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,6 +38,10 @@ div::-webkit-scrollbar {
 ol, ul {
   list-style: none; }
 
+ul::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; }
+
 blockquote, q {
   quotes: none; }
 
@@ -467,13 +471,26 @@ input:-webkit-autofill {
       border-radius: 3px;
       box-shadow: 2px 2px 5px 5px rgba(33, 34, 64, 0.16);
       cursor: pointer; }
-      .formField-input .input .popup .select-group-list .select-option, .formField-input .select .popup .select-group-list .select-option, .formField-select .input .popup .select-group-list .select-option, .formField-select .select .popup .select-group-list .select-option {
-        margin: 10px 20px 20px 20px;
-        display: flex;
-        justify-content: space-between;
-        color: #717285; }
-        .formField-input .input .popup .select-group-list .select-option-country-selected, .formField-input .select .popup .select-group-list .select-option-country-selected, .formField-select .input .popup .select-group-list .select-option-country-selected, .formField-select .select .popup .select-group-list .select-option-country-selected {
-          color: #000000; }
+      .formField-input .input .popup .gradient, .formField-input .select .popup .gradient, .formField-select .input .popup .gradient, .formField-select .select .popup .gradient {
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        bottom: 0;
+        background: -webkit-linear-gradient(white, rgba(255, 255, 255, 0));
+        background: linear-gradient(to top, white, rgba(255, 255, 255, 0)); }
+      .formField-input .input .popup .select-group-list, .formField-input .select .popup .select-group-list, .formField-select .input .popup .select-group-list, .formField-select .select .popup .select-group-list {
+        overflow-y: scroll;
+        overflow-x: hidden;
+        min-width: 240px;
+        max-height: 192px;
+        display: inline-block; }
+        .formField-input .input .popup .select-group-list .select-option, .formField-input .select .popup .select-group-list .select-option, .formField-select .input .popup .select-group-list .select-option, .formField-select .select .popup .select-group-list .select-option {
+          margin: 10px 20px 20px 20px;
+          display: flex;
+          justify-content: space-between;
+          color: #717285; }
+          .formField-input .input .popup .select-group-list .select-option-country-selected, .formField-input .select .popup .select-group-list .select-option-country-selected, .formField-select .input .popup .select-group-list .select-option-country-selected, .formField-select .select .popup .select-group-list .select-option-country-selected {
+            color: #000000; }
     .formField-input .input .select-open, .formField-input .select .select-open, .formField-select .input .select-open, .formField-select .select .select-open {
       display: block; }
 
