--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -113,7 +113,20 @@ input:-webkit-autofill {
         border-radius: 3px;
         box-shadow: 2px 2px 5px 5px $color-shadow-light;
         cursor: pointer;
+          .gradient{
+            width: 100%;
+	          height: 20%;
+	          position:absolute;
+	          bottom:0;
+	          background: -webkit-linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+	          background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+          }
           .select-group-list{
+            overflow-y: scroll;
+            overflow-x: hidden;
+            min-width: 240px;
+            max-height: 192px;
+	          display:inline-block;
             .select-option{
               margin: 10px 20px 20px 20px;
               display: flex;
