--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -117,6 +117,10 @@ input:-webkit-autofill {
         border-radius: 3px;
         box-shadow: 2px 2px 5px 5px $color-shadow-light;
         cursor: pointer;
+          &::-webkit-scrollbar {
+            width: 0px;
+            background: transparent;
+          }
           .gradient{
             width: 100%;
 	          height: 20%;
@@ -129,7 +133,11 @@ input:-webkit-autofill {
             overflow-x: hidden;
             min-width: 240px;
             max-height: 192px;
-	          display:inline-block;
+            display:inline-block;
+            &::-webkit-scrollbar {
+              width: 0px;
+              background: transparent;
+            }
             .select-option{
               margin: 10px 20px 20px 20px;
               display: flex;
