--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -133,18 +133,32 @@ input:-webkit-autofill {
             overflow-x: hidden;
             min-width: 240px;
             max-height: 192px;
-            display:inline-block;
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
             &::-webkit-scrollbar {
               width: 0px;
               background: transparent;
             }
             .select-option{
-              margin: 10px 20px 20px 20px;
+              margin: 15px 0px;
               display: flex;
               justify-content: space-between;
               color: $color-positive-light;
+              height: 32px;
+              border-radius: 4px; 
+              width: 224px;
+              &-container{
+                display: flex;
+                align-items: center;
+
+              }
               &-country-selected{
                 color: $color-black;
+              }
+              &:hover{
+                background-color: $color-selago;
               }
             }
           }
